[package]
name = "porcel8"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
simple_logger = "5.0.0"
byteorder = "1.5"
sdl2 = "0.37.0"
rand = "0.9.0"

[profile.release]
strip = true
lto = true
